@@ -1,5 +1,6 @@
 - fix testsuite
 - library:
+  o drop urpm::download::sync() (obsolete for years)
   o enhanced doc
   o internal cleanup (needs new drakx/rpmdrake)
 - security:
